[project]
name = "hyvideo"
version = "0.1.0"
description = "HunyuanVideo-1.5"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "diffusers",
    "accelerate",
    "einops",
    "easydict",
    "omegaconf",
    "ftfy",
    "huggingface_hub",
    "pillow",
    "imageio",
    "av",
    "opencv-python-headless",
    "ninja",
    "psutil",
    "librosa",
    "peft",
    "absl-py",
    "loguru",
    "sentencepiece",
    "protobuf",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hyvideo"]
