[project]
name = "hunyuanvideo-1.5"
version = "1.0.0"
description = "HunyuanVideo-1.5"
requires-python = ">=3.10"
dependencies = [
    "tqdm==4.67.1",
    "torch==2.9.1+cu130",
    "peft==0.17.0",
    "openai==2.8.0",
    "einops==0.8.0",
    "loguru==0.7.3",
    "numpy",
    "pillow==11.3.0",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "omegaconf>=2.3.0",
    "torchaudio==2.9.1",
    "diffusers==0.35.0",
    "safetensors==0.4.5",
    "torchvision==0.24.1",
    "qwen-vl-utils==0.0.8",
    "huggingface-hub==0.34.0",
    "huggingface_hub[cli]",
    "transformers[accelerate,tiktoken]==4.56.0",
    "wheel",
    "setuptools",
    "modelscope",
    "easydict",
    "ftfy",
    "av",
    "opencv-python-headless",
    "ninja",
    "psutil",
    "librosa",
    "absl-py",
    "sentencepiece",
    "protobuf",
    "accelerate",
    "markupsafe==2.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hyvideo"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cuda" }]
torchaudio = [{ index = "pytorch-cuda" }]
torchvision = [{ index = "pytorch-cuda" }]
